--- a/Round/Round.html
+++ b/Round/Round.html
@@ -22,26 +22,6 @@
     <div class="loader"></div>
   </div>
 
-  <script>
-    const options = document.querySelectorAll('.option');
-    const loading = document.getElementById('loading');
-
-    options.forEach(option => {
-      option.addEventListener('click', () => {
-        options.forEach(o => o.classList.remove('selected'));
-        option.classList.add('selected');
-
-        const file = option.getAttribute('data-file');
-        localStorage.setItem('selectedRound', file);
-
-        // show loading overlay before navigating
-        loading.classList.add('active');
-
-        setTimeout(() => {
-          window.location.href = '../Gameplay/game.html';
-        }, 2000); // simulate loading delay
-      });
-    });
-  </script>
+  <script src="Round.js"></script>
 </body>
 </html>
