Fix casing of 'stylesheet' in Round.html

--- a/Round/Round.html
+++ b/Round/Round.html
@@ -6,7 +6,7 @@
   <title>Round Select — Monkeytype Theme</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="Stylesheet" href="Round.css">
+  <link rel="stylesheet" href="Round.css">
 </head>
 <body>
   <div class="card max-w-md w-full">
