--- a/Index.html
+++ b/Index.html
@@ -33,11 +33,7 @@
                         <div class="text-lg font-semibold">Play</div>
                         <div class="text-xs text-[color:var(--muted)]">Jump into the game</div>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-[color:var(--accent)]" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M14.752 11.168l-6.518-3.76A1 1 0 006 8.239v7.522a1 1 0 001.234.97l6.518-1.5a1 1 0 00.748-.97v-3.293a1 1 0 00-.748-.7z" />
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#f5c211" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-play-icon lucide-play"><path d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"/></svg>
                 </a>
 
                 <a href="Gameplay/Contributors.html" id="contributorsBtn"
@@ -46,11 +42,7 @@
                         <div class="text-lg font-semibold">Contributors</div>
                         <div class="text-xs text-[color:var(--muted)]">See who helped build this</div>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-[color:var(--accent-2)]"
-                        viewBox="0 0 20 20" fill="currentColor">
-                        <path d="M13 7a3 3 0 11-6 0 3 3 0 016 0z" />
-                        <path fill-rule="evenodd" d="M2 14s1-4 8-4 8 4 8 4v2H2v-2z" clip-rule="evenodd" />
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#f5c211" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-code-icon lucide-square-code"><path d="m10 9-3 3 3 3"/><path d="m14 15 3-3-3-3"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
                 </a>
 
                 <button id="quitBtn"
@@ -59,12 +51,7 @@
                         <div class="text-lg font-semibold">Quit</div>
                         <div class="text-xs text-[color:var(--muted)]">Close the application</div>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-red-400" viewBox="0 0 20 20"
-                        fill="currentColor">
-                        <path fill-rule="evenodd"
-                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 011.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                            clip-rule="evenodd" />
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#e01b24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="m16 17 5-5-5-5"/><path d="M21 12H9"/><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/></svg>
                 </button>
             </section>
 
